<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">WeatherApp</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>

    <string name="format_temperature">
        <xliff:g id="temp">%1.0f</xliff:g>\u00B0
    </string>

    <string name="action_drop_table">Drop Table</string>
    <string name="action_refresh_table">Refresh Table</string>
    <string name="contentDescription_weather_icon">Icon that represents expected weather</string>

    <string name="weather_now_humidity_level_hint">Humidity level: </string>
    <string name="weather_now_current_temp_hint">Temperature is: </string>
    <string name="weather_now_description_hint">Weather is whatever</string>
    <string name="weather_now_date_hint">Weather now</string>
    <string name="weather_now_location_hint">Your location</string>

    <string name="weather_now_current_temp">Temperature is: %1$s%2$s</string>
    <string name="degrees_celsius">°</string>
    <string name="weather_now_humidity_level">Humidity level: %1$s</string>

    <string name="temperature_view_holder_degrees_celsius">%1$s°</string>
    <string name="title_activity_settings">Settings</string>
    <string name="weather_now">Weather now</string>

    <string name="weather_details_date">Date: %1$s</string>
    <string name="weather_details_summary">Summary: %1$s</string>
    <string name="weather_details_temperature_max">Temperature max: %1$s%2$s</string>
    <string name="weather_details_temperature_min">Temperature min: %1$s%2$s</string>
    <string name="weather_details_humidity">Humidity: %1$s</string>
    <string name="weather_details_pressure">Pressure: %1$s</string>
    <string name="weather_details_wind_speed">Wind speed: %1$s</string>
    <string name="gps_network_not_enabled">Network not enabled</string>
    <string name="open_location_settings">Open location settings</string>
    <string name="Cancel">Cencel</string>
    <string name="settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="list_preference_location_titles">
        <item>Location 1</item>
        <item>Location 2</item>
        <item>Location 3</item>
    </string-array>

    <string-array name="list_preference_location_coordinates">
        <item>Coordinate 1</item>
        <item>Coordinate 2</item>
        <item>Coordinate 3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="connections">Connections</string>
    <string name="location">Location</string>
</resources>