<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.example.oleg.weatherapp_demo.settings.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="com.example.oleg.weatherapp_demo.settings.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="com.example.oleg.weatherapp_demo.settings.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_data_sync" />

    <header
        android:fragment="com.example.oleg.weatherapp_demo.settings.SettingsActivity$ConnectionPreferenceFragment"
        android:icon="@drawable/ic_setting_connections_black_24dp"
        android:title="@string/connections"/>

    <header
        android:fragment="com.example.oleg.weatherapp_demo.settings.SettingsActivity$LocationPreferenceFragment"
        android:icon="@drawable/ic_setting_location_black_24dp"
        android:title="@string/location"/>

</preference-headers>
